// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`input snapshot renders 1`] = `
<div
  className="MuiFormControl-root-27 RawInput-formControl-2"
>
  <div
    className="RawInput-inputAndIcon-4"
  >
    <div
      className="MuiInput-root-31 RawInput-inputRoot-3 MuiInput-formControl-32 MuiInput-underline-35"
    >
      <input
        aria-invalid={false}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInput-input-39"
        defaultValue={undefined}
        disabled={false}
        id={undefined}
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={undefined}
        required={false}
        rows={undefined}
        type="text"
        value="hi"
      />
    </div>
  </div>
  <p
    className="MuiFormHelperText-root-44 MuiFormHelperText-filled-49"
  >
    
  </p>
</div>
`;

exports[`input snapshot renders alignment 1`] = `
<div
  className="MuiFormControl-root-27 RawInput-formControl-2"
>
  <div
    className="RawInput-inputAndIcon-4"
  >
    <div
      className="MuiInput-root-77 RawInput-inputRoot-3 MuiInput-formControl-78 MuiInput-underline-81"
    >
      <input
        aria-invalid={false}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInput-input-85 RawInput-right-6 RawInput-size4-11"
        defaultValue={undefined}
        disabled={false}
        id={undefined}
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={undefined}
        required={false}
        rows={undefined}
        type="text"
        value="hi"
      />
    </div>
  </div>
  <p
    className="MuiFormHelperText-root-44 MuiFormHelperText-filled-49"
  >
    
  </p>
</div>
`;

exports[`input snapshot renders correct feedback 1`] = `
<div
  className="MuiFormControl-root-27 RawInput-formControl-2"
>
  <div
    className="RawInput-inputAndIcon-4"
  >
    <div
      className="MuiInput-root-51 RawInput-inputRoot-3 MuiInput-formControl-52 MuiInput-underline-55"
    >
      <input
        aria-invalid={false}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInput-input-59"
        defaultValue={undefined}
        disabled={false}
        id={undefined}
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={undefined}
        required={false}
        rows={undefined}
        type="text"
        value="hi"
      />
    </div>
    <div
      className="RawInput-icon-5"
    >
      <div>
        Correct
      </div>
    </div>
  </div>
  <div>
    Feedback
  </div>
  <p
    className="MuiFormHelperText-root-44 MuiFormHelperText-filled-49"
  >
    
  </p>
</div>
`;

exports[`input snapshot renders disabled 1`] = `
<div
  className="MuiFormControl-root-27 RawInput-formControl-2"
>
  <div
    className="RawInput-inputAndIcon-4"
  >
    <div
      className="MuiInput-root-64 RawInput-inputRoot-3 MuiInput-disabled-67 MuiInput-formControl-65 MuiInput-underline-68"
    >
      <input
        aria-invalid={false}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInput-input-72 MuiInput-disabled-67"
        defaultValue={undefined}
        disabled={true}
        id={undefined}
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={undefined}
        required={false}
        rows={undefined}
        type="text"
        value="hi"
      />
    </div>
  </div>
  <p
    className="MuiFormHelperText-root-44 MuiFormHelperText-disabled-46 MuiFormHelperText-filled-49"
  >
    
  </p>
</div>
`;
